--- a/css/style.css
+++ b/css/style.css
@@ -216,11 +216,10 @@ html .woocommerce .greennature-widget-title { font-size: 12px; }
 .greennature-header-wrapper{ z-index: 99; }
 .greennature-logo-container,
 .greennature-header-container{ position: relative; z-index: 97; }
-.greennature-logo{ float: left; margin-left: 0px; margin-right: 15px; }
+.greennature-logo{ float: left; }
 .greennature-logo h1{ margin-bottom: 0px; line-height: 0; }
 
 .greennature-fixed-header{ position: fixed; top: 0px; left: 0px; right: 0px; z-index: 999; }
-.greennature-fixed-header .greennature-logo { margin-top: 16px; margin-bottom: 16px; }
 .greennature-fixed-header .greennature-logo img{ max-height: 38px; width: auto; }
 .greennature-fixed-header .greennature-navigation-wrapper{ margin-top: 25px; }
 .greennature-fixed-header .greennature-main-menu > li > a { padding-bottom: 18px; }
